########################################################################
# Copyright (C) 2000,2001,2002 Shinobu Yoshimura, University of Tokyo, #
# the Japan Society for the Promotion of Science (JSPS)                #
# All Rights Reserved                                                  #
########################################################################

AUTOMAKE_OPTIONS = foreign no-installman no-installinfo

DOCDIR=@docdir@
pkgdatadir=$(DOCDIR)/@PACKAGE@

EXTRA_DIST=AdvDocument.pdf AdvDocument-jp.pdf manual-jp.pdf manual.pdf

pkgdata_DATA=AdvDocument.pdf AdvDocument-jp.pdf manual-jp.pdf manual.pdf

